Fixed Serval-top shifting

--- a/css.css
+++ b/css.css
@@ -14,12 +14,18 @@ body {
 }
 
 .serval-top{
-  background-image:url("serval-top.svg");
   position: relative;
   left: 25%;
   width: 50%;
-  height: 689.5px;
-  background-repeat: no-repeat;
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
+  user-drag: none;
+  -webkit-user-drag: none;
 }
 
 .footer{
